Fixed visual glitch where left arrow would be temporarily visible when entering the page. Set home page to be stats as that is where random users will be initially directed

--- a/site/models/public/style/style.scss
+++ b/site/models/public/style/style.scss
@@ -339,6 +339,7 @@ index {
       margin: 2%;
       transform: translate(-50%, -50%);
       cursor: pointer;
+      visibility: hidden;
     }
   }
 }
